changes junit module access to reflection only